go-im: 添加了用户登录入口
